Fix dark mode for habitats, vizia and reflection

--- a/src/css/games/habitats.less
+++ b/src/css/games/habitats.less
@@ -78,6 +78,20 @@ html[data-theme=dark] {
 		filter: invert(1) hue-rotate(180deg);
 	}
 
+	#habitats-trackers-modal .modal-content {
+		background: #727272;
+	}
+
+	.player-board-game-specific-content .habitats-goal-score-counters {
+		.habitats-goal-name-label {
+			color: var(--light-60);
+		}
+
+		.habitats-goal-score-row.habitats-goal-row-current {
+			background-color: var(--dark-40);
+		}
+	}
+
 	#habitats-trackers-modal #habitats-trackers-content,
 	.goal-card-front,
 	.card-stock.grid-stock .slot {
